--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@ body {
     height: 100vh;
     /* //background: linear-gradient(to right bottom, #6d327c, #485DA6, #00a1ba, #01b18e, #32b37b); */
     /* // background: #D3D3D3; */
-    background-image: url("../public/bg.jpg");
+    background-image: url("../public/bg.jpeg");
     position: fixed;
     left: 0;
     top: 0;
@@ -61,4 +61,13 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.shadow-lg {
+  --tw-shadow: 10px 10px 15px -1px rgb(0 0 0 / 60%), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+}
+
+hr {
+  color: #6d327c;
+  border: 0.5px solid;
 }
